Fix: Fix flashing scrollbar on growing textbox

--- a/assets/stylesheets/Posts/PostForm.scss
+++ b/assets/stylesheets/Posts/PostForm.scss
@@ -11,7 +11,7 @@
     font-size: 14px;
     margin-bottom: 6px;
     transition: 0.5s;
-    overflow-y: auto;
+    overflow: hidden;
 
     &:focus {
       border: 2px solid #99DAFD;
